Add: Error checking, open/close methods.

--- a/extensions/IntelliJ/src/main/resources/META-INF/plugin.xml
+++ b/extensions/IntelliJ/src/main/resources/META-INF/plugin.xml
@@ -65,10 +65,13 @@ It is displayed on the plugin page in the Marketplace.
 
     <!--
     `Application-level listeners <https://plugins.jetbrains.com/docs/intellij/plugin-listeners.html#defining-application-level-listeners>`_.
-    <applicationListeners>
-        <listener class="com.github.bjones1.intellij.codechat.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
+
+    .. code:: xml
+
+        <applicationListeners>
+            <listener class="com.github.bjones1.intellij.codechat.listeners.MyProjectManagerListener"
+                      topic="com.intellij.openapi.project.ProjectManagerListener"/>
+        </applicationListeners>
     -->
 
     <!-- `Actions <https://plugins.jetbrains.com/docs/intellij/basic-action-system.html>`_ -->
@@ -76,7 +79,7 @@ It is displayed on the plugin page in the Marketplace.
         <action
                 id="com.github.bjones1.intellij.codechat.EnableDisableAction"
                 class="com.github.bjones1.intellij.codechat.EnableDisableAction"
-                text="Enable/disable the CodeChat plugin"
+                text="Open/close the CodeChat plugin"
         >
             <add-to-group
                     group-id="ToolsMenu"
