Fix: Move to the CherryPy web framework, to work around Codespaces bugs.

--- a/CodeChat_Server/mypy.ini
+++ b/CodeChat_Server/mypy.ini
@@ -40,6 +40,9 @@ ignore_missing_imports = True
 [mypy-bottle.*]
 ignore_missing_imports = True
 
+[mypy-cherrypy.*]
+ignore_missing_imports = True
+
 [mypy-coverage.*]
 ignore_missing_imports = True
 
